	PR c++/47041 	* semantics.c (build_constexpr_constructor_member_initializers): 	Handle trivial copy.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169108 138bc75d-0d04-0410-961f-82ee72b054a4